package integration

import (
	"context"
	"fmt"
	"testing"
	"time"

	"Qingyu_backend/service/ai"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
)

const (
	grpcServerAddr = "localhost:50051"
	testTimeout    = 120 * time.Second
)

func requireAIService(t *testing.T) *ai.Phase3Client {
	t.Helper()

	client, err := ai.NewPhase3Client(grpcServerAddr)
	if err != nil {
		t.Skipf("AI gRPCæœåŠ¡ä¸å¯ç”¨ï¼Œè·³è¿‡æµ‹è¯•: %v", err)
	}

	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()

	if _, err := client.HealthCheck(ctx); err != nil {
		client.Close()
		t.Skipf("AI gRPCå¥åº·æ£€æŸ¥å¤±è´¥ï¼Œè·³è¿‡æµ‹è¯•: %v", err)
	}

	return client
}

// TestGRPCConnection æµ‹è¯•gRPCè¿æ¥
func TestGRPCConnection(t *testing.T) {
	client := requireAIService(t)
	defer client.Close()

	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	resp, err := client.HealthCheck(ctx)
	require.NoError(t, err, "å¥åº·æ£€æŸ¥å¤±è´¥")
	assert.Equal(t, "healthy", resp.Status, "æœåŠ¡çŠ¶æ€ä¸å¥åº·")

	fmt.Printf("âœ… gRPCè¿æ¥æˆåŠŸ - çŠ¶æ€: %s\n", resp.Status)
	for name, status := range resp.Checks {
		fmt.Printf("   - %s: %s\n", name, status)
	}
}

// TestGenerateOutline æµ‹è¯•å¤§çº²ç”Ÿæˆ
func TestGenerateOutline(t *testing.T) {
	client := requireAIService(t)
	defer client.Close()

	ctx, cancel := context.WithTimeout(context.Background(), testTimeout)
	defer cancel()

	task := "åˆ›ä½œä¸€ä¸ªä¿®ä»™å°è¯´å¤§çº²ï¼Œä¸»è§’æ˜¯å¤©æ‰å°‘å¹´ï¼ŒåŒ…å«5ç« å†…å®¹"

	fmt.Printf("\nğŸ“– æµ‹è¯•å¤§çº²ç”Ÿæˆ\n")
	fmt.Printf("   ä»»åŠ¡: %s\n", task)

	startTime := time.Now()
	resp, err := client.GenerateOutline(ctx, task, "test_user", "test_project", nil)
	duration := time.Since(startTime)

	require.NoError(t, err, "å¤§çº²ç”Ÿæˆå¤±è´¥")
	require.NotNil(t, resp, "å¤§çº²å“åº”ä¸ºç©º")
	require.NotNil(t, resp.Outline, "å¤§çº²æ•°æ®ä¸ºç©º")

	// éªŒè¯å¤§çº²æ•°æ®
	assert.NotEmpty(t, resp.Outline.Title, "å¤§çº²æ ‡é¢˜ä¸ºç©º")
	assert.NotEmpty(t, resp.Outline.Genre, "å¤§çº²ç±»å‹ä¸ºç©º")
	assert.Greater(t, len(resp.Outline.Chapters), 0, "ç« èŠ‚æ•°é‡ä¸º0")

	fmt.Printf("\nâœ… å¤§çº²ç”ŸæˆæˆåŠŸ! è€—æ—¶: %.2fç§’\n", duration.Seconds())
	fmt.Printf("   ğŸ“– æ ‡é¢˜: %s\n", resp.Outline.Title)
	fmt.Printf("   ğŸ­ ç±»å‹: %s\n", resp.Outline.Genre)
	fmt.Printf("   ğŸ“š ç« èŠ‚æ•°: %d\n", len(resp.Outline.Chapters))

	if len(resp.Outline.Chapters) > 0 {
		fmt.Println("   ç« èŠ‚åˆ—è¡¨:")
		for i, chapter := range resp.Outline.Chapters {
			if i < 3 {
				fmt.Printf("     %d. %s\n", i+1, chapter.Title)
			}
		}
		if len(resp.Outline.Chapters) > 3 {
			fmt.Printf("     ... è¿˜æœ‰ %d ç« \n", len(resp.Outline.Chapters)-3)
		}
	}
}

// TestGenerateCharacters æµ‹è¯•è§’è‰²ç”Ÿæˆ
func TestGenerateCharacters(t *testing.T) {
	client := requireAIService(t)
	defer client.Close()

	ctx, cancel := context.WithTimeout(context.Background(), testTimeout)
	defer cancel()

	// å…ˆç”Ÿæˆå¤§çº²
	outlineResp, err := client.GenerateOutline(
		ctx,
		"åˆ›ä½œä¸€ä¸ªä¿®ä»™å°è¯´å¤§çº²",
		"test_user",
		"test_project",
		nil,
	)
	require.NoError(t, err, "å¤§çº²ç”Ÿæˆå¤±è´¥")

	fmt.Printf("\nğŸ‘¤ æµ‹è¯•è§’è‰²ç”Ÿæˆ\n")

	// ç”Ÿæˆè§’è‰²
	startTime := time.Now()
	resp, err := client.GenerateCharacters(
		ctx,
		"æ ¹æ®å¤§çº²åˆ›å»ºä¸»è¦è§’è‰²",
		"test_user",
		"test_project",
		outlineResp.Outline,
		nil,
	)
	duration := time.Since(startTime)

	require.NoError(t, err, "è§’è‰²ç”Ÿæˆå¤±è´¥")
	require.NotNil(t, resp, "è§’è‰²å“åº”ä¸ºç©º")
	require.NotNil(t, resp.Characters, "è§’è‰²æ•°æ®ä¸ºç©º")
	assert.Greater(t, len(resp.Characters.Characters), 0, "è§’è‰²æ•°é‡ä¸º0")

	fmt.Printf("\nâœ… è§’è‰²ç”ŸæˆæˆåŠŸ! è€—æ—¶: %.2fç§’\n", duration.Seconds())
	fmt.Printf("   ğŸ‘¥ è§’è‰²æ•°é‡: %d\n", len(resp.Characters.Characters))

	if len(resp.Characters.Characters) > 0 {
		fmt.Println("   è§’è‰²åˆ—è¡¨:")
		for i, char := range resp.Characters.Characters {
			if i < 3 {
				fmt.Printf("     %d. %s (%s)\n", i+1, char.Name, char.RoleType)
				if char.Personality != nil && len(char.Personality.Traits) > 0 {
					fmt.Printf("        æ€§æ ¼: %v\n", char.Personality.Traits[:min(3, len(char.Personality.Traits))])
				}
			}
		}
	}
}

// TestGeneratePlot æµ‹è¯•æƒ…èŠ‚ç”Ÿæˆ
func TestGeneratePlot(t *testing.T) {
	client := requireAIService(t)
	defer client.Close()

	ctx, cancel := context.WithTimeout(context.Background(), testTimeout)
	defer cancel()

	// å…ˆç”Ÿæˆå¤§çº²å’Œè§’è‰²
	outlineResp, err := client.GenerateOutline(
		ctx,
		"åˆ›ä½œä¸€ä¸ªä¿®ä»™å°è¯´å¤§çº²",
		"test_user",
		"test_project",
		nil,
	)
	require.NoError(t, err, "å¤§çº²ç”Ÿæˆå¤±è´¥")

	charResp, err := client.GenerateCharacters(
		ctx,
		"æ ¹æ®å¤§çº²åˆ›å»ºä¸»è¦è§’è‰²",
		"test_user",
		"test_project",
		outlineResp.Outline,
		nil,
	)
	require.NoError(t, err, "è§’è‰²ç”Ÿæˆå¤±è´¥")

	fmt.Printf("\nğŸ“Š æµ‹è¯•æƒ…èŠ‚ç”Ÿæˆ\n")

	// ç”Ÿæˆæƒ…èŠ‚
	startTime := time.Now()
	resp, err := client.GeneratePlot(
		ctx,
		"æ ¹æ®å¤§çº²å’Œè§’è‰²è®¾è®¡æƒ…èŠ‚",
		"test_user",
		"test_project",
		outlineResp.Outline,
		charResp.Characters,
		nil,
	)
	duration := time.Since(startTime)

	require.NoError(t, err, "æƒ…èŠ‚ç”Ÿæˆå¤±è´¥")
	require.NotNil(t, resp, "æƒ…èŠ‚å“åº”ä¸ºç©º")
	require.NotNil(t, resp.Plot, "æƒ…èŠ‚æ•°æ®ä¸ºç©º")
	assert.Greater(t, len(resp.Plot.TimelineEvents), 0, "äº‹ä»¶æ•°é‡ä¸º0")

	fmt.Printf("\nâœ… æƒ…èŠ‚ç”ŸæˆæˆåŠŸ! è€—æ—¶: %.2fç§’\n", duration.Seconds())
	fmt.Printf("   ğŸ“… äº‹ä»¶æ•°é‡: %d\n", len(resp.Plot.TimelineEvents))
	fmt.Printf("   ğŸ§µ æƒ…èŠ‚çº¿æ•°: %d\n", len(resp.Plot.PlotThreads))

	if len(resp.Plot.TimelineEvents) > 0 {
		fmt.Println("   ä¸»è¦äº‹ä»¶:")
		for i, event := range resp.Plot.TimelineEvents {
			if i < 3 {
				fmt.Printf("     %d. %s (%s)\n", i+1, event.Title, event.Timestamp)
				fmt.Printf("        ç±»å‹: %s\n", event.EventType)
			}
		}
	}
}

// TestCompleteWorkflow æµ‹è¯•å®Œæ•´å·¥ä½œæµ
func TestCompleteWorkflow(t *testing.T) {
	if testing.Short() {
		t.Skip("è·³è¿‡é•¿æ—¶é—´æµ‹è¯•")
	}

	client := requireAIService(t)
	defer client.Close()

	ctx, cancel := context.WithTimeout(context.Background(), 180*time.Second)
	defer cancel()

	fmt.Printf("\nğŸ¨ æµ‹è¯•å®Œæ•´åˆ›ä½œå·¥ä½œæµ\n")
	fmt.Printf("   â³ è¿™å¯èƒ½éœ€è¦30-60ç§’...\n")

	startTime := time.Now()
	resp, err := client.ExecuteCreativeWorkflow(
		ctx,
		"åˆ›ä½œä¸€ä¸ªéƒ½å¸‚çˆ±æƒ…å°è¯´çš„å®Œæ•´è®¾å®šï¼ŒåŒ…å«3ç« å†…å®¹",
		"test_user",
		"test_project",
		3,     // æœ€å¤§åæ€æ¬¡æ•°
		false, // ä¸å¯ç”¨äººå·¥å®¡æ ¸
		nil,
	)
	duration := time.Since(startTime)

	require.NoError(t, err, "å·¥ä½œæµæ‰§è¡Œå¤±è´¥")
	require.NotNil(t, resp, "å·¥ä½œæµå“åº”ä¸ºç©º")

	// éªŒè¯å“åº”
	assert.NotEmpty(t, resp.ExecutionId, "æ‰§è¡ŒIDä¸ºç©º")
	assert.NotNil(t, resp.Outline, "å¤§çº²æ•°æ®ä¸ºç©º")
	assert.NotNil(t, resp.Characters, "è§’è‰²æ•°æ®ä¸ºç©º")
	assert.NotNil(t, resp.Plot, "æƒ…èŠ‚æ•°æ®ä¸ºç©º")

	fmt.Printf("\nâœ… å·¥ä½œæµæ‰§è¡ŒæˆåŠŸ! æ€»è€—æ—¶: %.2fç§’\n", duration.Seconds())
	fmt.Printf("   ğŸ†” æ‰§è¡ŒID: %s\n", resp.ExecutionId)
	fmt.Printf("   âœ“  å®¡æ ¸çŠ¶æ€: %v\n", resp.ReviewPassed)
	fmt.Printf("   ğŸ”„ åæ€æ¬¡æ•°: %d\n", resp.ReflectionCount)

	if resp.Outline != nil {
		fmt.Printf("\n   ğŸ“– å¤§çº²: %s\n", resp.Outline.Title)
		fmt.Printf("      ç« èŠ‚æ•°: %d\n", len(resp.Outline.Chapters))
	}

	if resp.Characters != nil {
		fmt.Printf("\n   ğŸ‘¥ è§’è‰²æ•°: %d\n", len(resp.Characters.Characters))
	}

	if resp.Plot != nil {
		fmt.Printf("\n   ğŸ“Š äº‹ä»¶æ•°: %d\n", len(resp.Plot.TimelineEvents))
		fmt.Printf("      æƒ…èŠ‚çº¿: %d\n", len(resp.Plot.PlotThreads))
	}

	if len(resp.ExecutionTimes) > 0 {
		fmt.Println("\n   â±ï¸  æ‰§è¡Œæ—¶é—´åˆ†æ:")
		totalTime := float32(0)
		for stage, execTime := range resp.ExecutionTimes {
			fmt.Printf("      %s: %.2fç§’\n", stage, execTime)
			totalTime += execTime
		}
		fmt.Printf("      æ€»è®¡: %.2fç§’\n", totalTime)
	}
}

// TestConcurrentRequests æµ‹è¯•å¹¶å‘è¯·æ±‚
func TestConcurrentRequests(t *testing.T) {
	if testing.Short() {
		t.Skip("è·³è¿‡å¹¶å‘æµ‹è¯•")
	}

	client := requireAIService(t)
	defer client.Close()

	fmt.Printf("\nğŸ”€ æµ‹è¯•å¹¶å‘è¯·æ±‚\n")

	concurrency := 3
	done := make(chan bool, concurrency)
	errors := make(chan error, concurrency)

	for i := 0; i < concurrency; i++ {
		go func(id int) {
			ctx, cancel := context.WithTimeout(context.Background(), testTimeout)
			defer cancel()

			task := fmt.Sprintf("åˆ›ä½œç¬¬%dä¸ªæ•…äº‹å¤§çº²", id+1)
			resp, err := client.GenerateOutline(ctx, task, "test_user", "test_project", nil)

			if err != nil {
				errors <- err
			} else if resp == nil || resp.Outline == nil {
				errors <- fmt.Errorf("å“åº”ä¸ºç©º")
			} else {
				fmt.Printf("   [%d] âœ“ å®Œæˆ: %s\n", id+1, resp.Outline.Title)
				done <- true
			}
		}(i)
	}

	// ç­‰å¾…æ‰€æœ‰è¯·æ±‚å®Œæˆ
	successCount := 0
	for i := 0; i < concurrency; i++ {
		select {
		case <-done:
			successCount++
		case err := <-errors:
			t.Logf("è¯·æ±‚å¤±è´¥: %v", err)
		case <-time.After(testTimeout):
			t.Fatal("å¹¶å‘æµ‹è¯•è¶…æ—¶")
		}
	}

	assert.Equal(t, concurrency, successCount, "éƒ¨åˆ†å¹¶å‘è¯·æ±‚å¤±è´¥")
	fmt.Printf("\nâœ… å¹¶å‘æµ‹è¯•é€šè¿‡! æˆåŠŸ: %d/%d\n", successCount, concurrency)
}

// TestErrorHandling æµ‹è¯•é”™è¯¯å¤„ç†
func TestErrorHandling(t *testing.T) {
	client := requireAIService(t)
	defer client.Close()

	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	fmt.Printf("\nâš ï¸  æµ‹è¯•é”™è¯¯å¤„ç†\n")

	// æµ‹è¯•ç©ºä»»åŠ¡
	_, err := client.GenerateOutline(ctx, "", "test_user", "test_project", nil)
	assert.Error(t, err, "ç©ºä»»åŠ¡åº”è¯¥è¿”å›é”™è¯¯")
	fmt.Printf("   [1/2] âœ“ ç©ºä»»åŠ¡é”™è¯¯å¤„ç†æ­£å¸¸\n")

	// æµ‹è¯•è¶…æ—¶
	shortCtx, shortCancel := context.WithTimeout(context.Background(), 1*time.Millisecond)
	defer shortCancel()

	_, err = client.GenerateOutline(shortCtx, "æµ‹è¯•ä»»åŠ¡", "test_user", "test_project", nil)
	assert.Error(t, err, "è¶…æ—¶åº”è¯¥è¿”å›é”™è¯¯")
	fmt.Printf("   [2/2] âœ“ è¶…æ—¶é”™è¯¯å¤„ç†æ­£å¸¸\n")

	fmt.Printf("\nâœ… é”™è¯¯å¤„ç†æµ‹è¯•é€šè¿‡\n")
}

// min è¾…åŠ©å‡½æ•°
func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}
